# fastapitutorial

./: .gitignore  README.md
backend/: main.py  pyproject.toml  test_db.db
backend/apis/: base.py
backend/apis/general_pages/: route_homepage.py
backend/apis/version1/: route_jobs.py  route_login.py
backend/core/: config.py
backend/db/: base_class.py
backend/db/repository/: jobs.py  users.py
backend/schemas/: jobs.py
backend/tests/: conftest.py
backend/tests/test_routes/: test_jobs.py  test_users.py
