[tool.poetry]
name = "fastapitutorial"
version = "0.1.0"
description = ""
authors = ["Frederico Gago <fredericogago@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.7"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^1.10.6"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
requests = "^2.28.2"
httpx = "^0.23.3"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
